--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -3,11 +3,11 @@
 <head>
 	@@include('../inc/pagehead.inc', {
 		"pagetitle": "인스턴트펑크 공식홈페이지 - 인스턴트펑크 INSTANTFUNK - 상품상세",
-		"webroot": "."
+		"webroot": "../"
 	})
-	<script src="/web/assets/js/modernizr.js"></script>
-	<script src="/web/assets/js/product.js"></script>
-	<link rel="stylesheet" href="/web/assets/css/product.css">
+	<script src="../web/assets/js/modernizr.js"></script>
+	<script src="../web/assets/js/product.js"></script>
+	<link rel="stylesheet" href="../web/assets/css/product.css">
 </head>
 <body>
 	<div id="wrap">
@@ -30,10 +30,10 @@
 					<div class="swiper-container productDetailswp">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<img src="/web/assets/images/temp/@product01.png" alt="">
+								<img src="../web/assets/images/temp/@product01.png" alt="">
 							</div>
 							<div class="swiper-slide">
-								<img src="/web/assets/images/temp/@product02.png" alt="">
+								<img src="../web/assets/images/temp/@product02.png" alt="">
 							</div>
 						</div>
 						<div class="swiper-pagination"></div>
@@ -75,9 +75,9 @@
 							</ul> -->
 
 							<div class="product__quantity">
-								<a href="#" class="qty_button"><img src="/web/assets/images/btn_count_down.png" alt="수량감소"></a>
+								<a href="#" class="qty_button"><img src="../web/assets/images/btn_count_down.png" alt="수량감소"></a>
 								<input type="text" value="1" class="qty_input" maxlength="3" />
-								<a href="#" class="qty_button"><img src="/web/assets/images/btn_count_up.png" alt="수량증가"></a>
+								<a href="#" class="qty_button"><img src="../web/assets/images/btn_count_up.png" alt="수량증가"></a>
 							</div>
 
 							<!-- option list -->
@@ -89,9 +89,9 @@
 									<div class="product__etc">
 										<div class="qty__wrap">
 											<div class="product__quantity">
-												<a href="#" class="qty_button"><img src="/web/assets/images/btn_count_down.png" alt="수량감소"></a>
+												<a href="#" class="qty_button"><img src="../web/assets/images/btn_count_down.png" alt="수량감소"></a>
 												<input type="text" value="1" class="qty_input" maxlength="3" />
-												<a href="#" class="qty_button"><img src="/web/assets/images/btn_count_up.png" alt="수량증가"></a>
+												<a href="#" class="qty_button"><img src="../web/assets/images/btn_count_up.png" alt="수량증가"></a>
 											</div>
 											<a href="#" class="btn__delete"><span class="a11y">삭제</span></a>
 										</div>
@@ -107,9 +107,9 @@
 									<div class="product__etc">
 										<div class="qty__wrap">
 											<div class="product__quantity">
-												<a href="#" class="qty_button"><img src="/web/assets/images/btn_count_down.png" alt="수량감소"></a>
+												<a href="#" class="qty_button"><img src="../web/assets/images/btn_count_down.png" alt="수량감소"></a>
 												<input type="text" value="1" class="qty_input" maxlength="3" />
-												<a href="#" class="qty_button"><img src="/web/assets/images/btn_count_up.png" alt="수량증가"></a>
+												<a href="#" class="qty_button"><img src="../web/assets/images/btn_count_up.png" alt="수량증가"></a>
 											</div>
 											<a href="#" class="btn__delete"><span class="a11y">삭제</span></a>
 										</div>
@@ -137,7 +137,7 @@
 							</div>
 							<ul class="product__reivew--list">
 								<li class="rv__item">
-									<p class="rv__figure"><img src="/web/assets/images/temp/@product01.png"></p>
+									<p class="rv__figure"><img src="../web/assets/images/temp/@product01.png"></p>
 									<p class="rv__box">
 										<span class="rv__writer">test***</span> 아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당 아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당
 									</p>
@@ -201,7 +201,7 @@
 								<a href="#" class="act__btn btn_soldout">SOLD OUT</a>
 							</div>
 							<div id="NaverChk_Button" class="product__naverchk">
-								<img src="/web/assets/images/temp/@naverpay.jpg">
+								<img src="../web/assets/images/temp/@naverpay.jpg">
 							</div>
 						</div>
 
@@ -211,7 +211,7 @@
 
 				<div class="product__additional">
 					<div id="prdDetail" class="detail__cont">
-						<img src="/web/assets/images/temp/@productdetail.jpg">
+						<img src="../web/assets/images/temp/@productdetail.jpg">
 					</div>
 
 					<div id="prdGuide" class="product__section">
@@ -268,7 +268,7 @@
 
 					<div id="prdTalkwalk" class="product__section product__talkwalk">
 						<div>
-							<img src="/web/assets/images/temp/@talkwalk.jpg">
+							<img src="../web/assets/images/temp/@talkwalk.jpg">
 						</div>
 					</div>
 
@@ -295,7 +295,7 @@
 								<li class="review__list--item">
 									<a href="#">
 										<div class="rv__product">
-											<p class="rv__figure"><img src="/web/assets/images/temp/@product01.png"></p>
+											<p class="rv__figure"><img src="../web/assets/images/temp/@product01.png"></p>
 											<div class="rv__box">
 												<p class="rv__prname">Rinen Striped Jacket</p>
 												<span class="rv__prcode">448374@N</span>
@@ -313,7 +313,7 @@
 												손올리묜 배는 살짝살짝 보여요! 제가원하던 느낌! <br>쟐입구있어영ㅎㅎ</p>
 											<p class="rv__thumnb">
 												<span>8<em>+</em></span>
-												<img src="/web/assets/images/dummy.png"></p>
+												<img src="../web/assets/images/dummy.png"></p>
 											</p>
 										</div>
 									</a>
@@ -337,7 +337,7 @@
 								<li class="review__list--item">
 									<a href="#">
 										<div class="rv__product">
-											<p class="rv__figure"><img src="/web/assets/images/temp/@product01.png"></p>
+											<p class="rv__figure"><img src="../web/assets/images/temp/@product01.png"></p>
 											<div class="rv__box">
 												<p class="rv__prname">Rinen Striped Jacket</p>
 												<span class="rv__prcode">448374@N</span>
@@ -353,7 +353,7 @@
 											<p class="rv__text">S은 크롭이래서 살짝 부담스러서 m샀는데 기장이 딱!!이에요</p>
 											<p class="rv__thumnb">
 												<span>8<em>+</em></span>
-												<img src="/web/assets/images/dummy.png"></p>
+												<img src="../web/assets/images/dummy.png"></p>
 											</p>
 										</div>
 									</a>
@@ -375,7 +375,7 @@
 								<li class="review__list--item">
 									<a href="#">
 										<div class="rv__product">
-											<p class="rv__figure"><img src="/web/assets/images/temp/@product01.png"></p>
+											<p class="rv__figure"><img src="../web/assets/images/temp/@product01.png"></p>
 											<div class="rv__box">
 												<p class="rv__prname">Rinen Striped Jacket</p>
 												<span class="rv__prcode">448374@N</span>
@@ -393,7 +393,7 @@
 												손올리묜 배는 살짝살짝 보여요! 제가원하던 느낌! <br>쟐입구있어영ㅎㅎ</p>
 											<p class="rv__thumnb">
 												<span>8<em>+</em></span>
-												<img src="/web/assets/images/dummy.png"></p>
+												<img src="../web/assets/images/dummy.png"></p>
 											</p>
 										</div>
 									</a>
@@ -415,7 +415,7 @@
 								<li class="review__list--item">
 									<a href="#">
 										<div class="rv__product">
-											<p class="rv__figure"><img src="/web/assets/images/temp/@product01.png"></p>
+											<p class="rv__figure"><img src="../web/assets/images/temp/@product01.png"></p>
 											<div class="rv__box">
 												<p class="rv__prname">Rinen Striped Jacket</p>
 												<span class="rv__prcode">448374@N</span>
@@ -451,7 +451,7 @@
 								<li class="review__list--item">
 									<a href="#">
 										<div class="rv__product">
-											<p class="rv__figure"><img src="/web/assets/images/temp/@product01.png"></p>
+											<p class="rv__figure"><img src="../web/assets/images/temp/@product01.png"></p>
 											<div class="rv__box">
 												<p class="rv__prname">Rinen Striped Jacket</p>
 												<span class="rv__prcode">448374@N</span>
@@ -486,11 +486,11 @@
 
 							<div class="list__bottom"> 
 								<div class="review_paging">
-									<p><a href="#" class="btn__prev"><img src="/web/assets/images/btn_review_prev.gif" alt="이전 페이지" /></a></p>
+									<p><a href="#" class="btn__prev"><img src="../web/assets/images/btn_review_prev.gif" alt="이전 페이지" /></a></p>
 									<div class="paging_number">
 										<p><span>1</span>/<span>9</span></p>
 									</div>
-									<p><a href="#" class="btn__next"><img src="/web/assets/images/btn_review_next.gif" alt="다음 페이지" /></a></p>
+									<p><a href="#" class="btn__next"><img src="../web/assets/images/btn_review_next.gif" alt="다음 페이지" /></a></p>
 								</div>
 
 								<div class="list__bottom--btn">
@@ -530,10 +530,10 @@
 											<div class="menu__swiper swiper-container">
 												<ul class="swiper-wrapper">
 													<li class="swiper-slide">
-														<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
+														<div class="menu__img"><img src="../web/assets/images/product.png" alt="상품"></div>
 													</li>
 													<li class="swiper-slide">
-														<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
+														<div class="menu__img"><img src="../web/assets/images/product.png" alt="상품"></div>
 													</li>
 												</ul>
 												<div class="swiper-pagination"></div>
@@ -629,10 +629,10 @@
 											<div class="menu__swiper swiper-container">
 												<ul class="swiper-wrapper">
 													<li class="swiper-slide">
-														<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
+														<div class="menu__img"><img src="../web/assets/images/product.png" alt="상품"></div>
 													</li>
 													<li class="swiper-slide">
-														<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
+														<div class="menu__img"><img src="../web/assets/images/product.png" alt="상품"></div>
 													</li>
 												</ul>
 												<div class="swiper-pagination"></div>
@@ -703,10 +703,10 @@
 											<div class="menu__swiper swiper-container">
 												<ul class="swiper-wrapper">
 													<li class="swiper-slide">
-														<div class="menu__img"><img src="/web/assets/images/dummy.png" alt="상품"></div>
+														<div class="menu__img"><img src="../web/assets/images/dummy.png" alt="상품"></div>
 													</li>
 													<li class="swiper-slide">
-														<div class="menu__img"><img src="/web/assets/images/dummy.png" alt="상품"></div>
+														<div class="menu__img"><img src="../web/assets/images/dummy.png" alt="상품"></div>
 													</li>
 												</ul>
 												<div class="swiper-pagination"></div>
@@ -777,10 +777,10 @@
 											<div class="menu__swiper swiper-container">
 												<ul class="swiper-wrapper">
 													<li class="swiper-slide">
-														<div class="menu__img"><img src="/web/assets/images/dummy.png" alt="상품"></div>
+														<div class="menu__img"><img src="../web/assets/images/dummy.png" alt="상품"></div>
 													</li>
 													<li class="swiper-slide">
-														<div class="menu__img"><img src="/web/assets/images/dummy.png" alt="상품"></div>
+														<div class="menu__img"><img src="../web/assets/images/dummy.png" alt="상품"></div>
 													</li>
 												</ul>
 												<div class="swiper-pagination"></div>
@@ -861,7 +861,7 @@
 				<div class="layer__close"><a onclick="$('#Product_ReviewWrite').hide();" class="btn__close"><span class="a11y">닫기</span></a></div>
 				<div class="layer__content">
 					<div class="rv__product">
-						<p class="rv__figure"><img src="/web/assets/images/temp/@product01.png"></p>
+						<p class="rv__figure"><img src="../web/assets/images/temp/@product01.png"></p>
 						<div class="rv__box">
 							<p class="rv__prname">Rinen Striped Jacket</p>
 							<div class="rv__prcnt">
@@ -890,23 +890,23 @@
 						<!-- 사진 추가 후 //-->
 						<ul class="rv_photo_list" style="display: none;">
 							<li>
-								<img class="figure" title="" src="/web/assets/images/temp/@product01.png">
+								<img class="figure" title="" src="../web/assets/images/temp/@product01.png">
 								<button type="button" class="btn__delete"><span class="a11y">삭제</span></button>
 							</li>
 							<li>
-								<img class="figure" title="" src="/web/assets/images/temp/@product01.png">
+								<img class="figure" title="" src="../web/assets/images/temp/@product01.png">
 								<button type="button" class="btn__delete"><span class="a11y">삭제</span></button>
 							</li>
 							<li>
-								<img class="figure" title="" src="/web/assets/images/temp/@product01.png">
+								<img class="figure" title="" src="../web/assets/images/temp/@product01.png">
 								<button type="button" class="btn__delete"><span class="a11y">삭제</span></button>
 							</li>
 							<li>
-								<img class="figure" title="" src="/web/assets/images/temp/@product01.png">
+								<img class="figure" title="" src="../web/assets/images/temp/@product01.png">
 								<button type="button" class="btn__delete"><span class="a11y">삭제</span></button>
 							</li>
 							<!-- <li>
-								<img class="figure" title="" src="/web/assets/images/temp/@product01.png">
+								<img class="figure" title="" src="../web/assets/images/temp/@product01.png">
 								<button type="button" class="btn__delete"><span class="a11y">삭제</span></button>
 							</li> -->
 							<li>
@@ -976,7 +976,7 @@
 				<div class="layer__content">
 					<div class="cont_detail">
 						<div class="rv__product">
-							<p class="rv__figure"><img src="/web/assets/images/temp/@product01.png"></p>
+							<p class="rv__figure"><img src="../web/assets/images/temp/@product01.png"></p>
 							<div class="rv__box">
 								<div class="rv__head">
 									<p class="review__writter"><span>ININ******</span> 님의 리뷰</p>
