--- a/src/PC_MAN_1000.html
+++ b/src/PC_MAN_1000.html
@@ -21,7 +21,7 @@
 			<div class="visual">
 				<div class="visual__container">
 					<div class="visual__mask">
-						<div class="swiper-container">
+						<div class="swiper">
 							<div class="swiper-wrapper">
 								<div class="swiper-slide">
 									<div class="visual__video">
@@ -194,7 +194,7 @@
 									</p>
 									<a href="#" class="best-menu__link">VIEW</a>
 								</div>
-								<div class="swiper-container">
+								<div class="swiper">
 									<div class="swiper-wrapper">
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
@@ -218,7 +218,7 @@
 									</p>
 									<a href="#" class="best-menu__link">VIEW</a>
 								</div>
-								<div class="swiper-container">
+								<div class="swiper">
 									<div class="swiper-wrapper">
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
@@ -248,7 +248,7 @@
 										</p>
 										<a href="#" class="best-menu__link">VIEW</a>
 									</div>
-									<div class="swiper-container">
+									<div class="swiper">
 										<div class="swiper-wrapper">
 											<div class="swiper-slide">
 												<div class="best-menu__inner">
@@ -272,11 +272,11 @@
 										</p>
 										<a href="#" class="best-menu__link">VIEW</a>
 									</div>
-									<div class="swiper-container">
+									<div class="swiper">
 										<div class="swiper-wrapper">
 											<div class="swiper-slide">
 												<div class="best-menu__inner">
-													<div class="best-menu__img"><img src="/web/assets/images/@product_s.png" alt=""></div>
+													<div class="best-menu__img"><img src="/web/assets/images/@img_product04.png" alt=""></div>
 												</div>
 											</div>
 											<div class="swiper-slide">
@@ -296,7 +296,7 @@
 										</p>
 										<a href="#" class="best-menu__link">VIEW</a>
 									</div>
-									<div class="swiper-container">
+									<div class="swiper">
 										<div class="swiper-wrapper">
 											<div class="swiper-slide">
 												<div class="best-menu__inner">
@@ -322,7 +322,7 @@
 										</p>
 										<a href="#" class="best-menu__link">VIEW</a>
 									</div>
-									<div class="swiper-container">
+									<div class="swiper">
 										<div class="swiper-wrapper">
 											<div class="swiper-slide">
 												<div class="best-menu__inner">
@@ -351,7 +351,7 @@
 									</p>
 									<a href="#" class="best-menu__link">VIEW</a>
 								</div>
-								<div class="swiper-container">
+								<div class="swiper">
 									<div class="swiper-wrapper">
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
@@ -375,7 +375,7 @@
 									</p>
 									<a href="#" class="best-menu__link">VIEW</a>
 								</div>
-								<div class="swiper-container">
+								<div class="swiper">
 									<div class="swiper-wrapper">
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
@@ -399,7 +399,7 @@
 									</p>
 									<a href="#" class="best-menu__link">VIEW</a>
 								</div>
-								<div class="swiper-container">
+								<div class="swiper">
 									<div class="swiper-wrapper">
 										<div class="swiper-slide">
 											<div class="best-menu__inner">
@@ -493,7 +493,7 @@
 									<img src="/web/assets/images/@dummy_seleb04.png" alt="">
 								</div>
 							</div>
-							<div class="swiper-container">
+							<div class="swiper">
 								<div class="swiper-wrapper">
 									<div class="swiper-slide">
 										<div class="menu">
@@ -560,8 +560,8 @@
 										</div>
 									</div>
 								</div>
-								<button type="button" class="swiper-button-next">NEXT</button>
-								<button type="button" class="swiper-button-prev">PREV</button>
+								<button type="button" class="swiper-button-next"></button>
+								<button type="button" class="swiper-button-prev"></button>
 							</div>
 						</div>
 						<div class="celeb-curation__curtain">
@@ -576,44 +576,36 @@
 						<li class="menu__item">
 							<div class="menu__round">
 								<div class="menu__inner">
-									<a href="#" class="menu__link">
-										<div class="menu__category menu__category--outer">
-											<p class="menu__text">OUTER</p>
-										</div>
-									</a>
+									<div class="menu__category menu__category--outer">
+										<a href="#" class="menu__text">OUTER</a>
+									</div>
 								</div>
 							</div>
 						</li>
 						<li class="menu__item">
 							<div class="menu__round">
 								<div class="menu__inner">
-									<a href="#" class="menu__link">
-										<div class="menu__category menu__category--bottom">
-											<p class="menu__text">BOTTOM</p>
-										</div>
-									</a>
+									<div class="menu__category menu__category--bottom">
+										<a href="#" class="menu__text">BOTTOM</a>
+									</div>
 								</div>
 							</div>
 						</li>
 						<li class="menu__item">
 							<div class="menu__round">
 								<div class="menu__inner">
-									<a href="#" class="menu__link">
-										<div class="menu__category menu__category--top">
-											<p class="menu__text">TOP</p>
-										</div>
-									</a>
+									<div class="menu__category menu__category--top">
+										<a href="#" class="menu__text">TOP</a>
+									</div>
 								</div>
 							</div>
 						</li>
 						<li class="menu__item">
 							<div class="menu__round">
 								<div class="menu__inner">
-									<a href="#" class="menu__link">
-										<div class="menu__category menu__category--acc">
-											<p class="menu__text">ACC</p>
-										</div>
-									</a>
+									<div class="menu__category menu__category--acc">
+										<a href="#" class="menu__text">ACC</a>
+									</div>
 								</div>
 							</div>
 						</li>
